reset database, fixed whitespace check bug, changes secondary fonts

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Consolas', 'Palatino', Times, serif;
+    font-family: 'Consolas', 'Monaco', monospace, serif;
     font-size: x-large;
 }
 
